# File-manager

./: CMakeLists.txt
docs/html/: _main_window_8hpp_source.html  annotated.html  class_main_window-members.html  class_main_window.html  classes.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
docs/html/search/: all_0.js  functions_0.js  searchdata.js
docs/latex/: _main_window_8hpp_source.tex  annotated.tex  class_main_window.tex  files.tex  refman.tex
gui/: MainWindow.cpp  MainWindow.hpp
